--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,13 +2,18 @@
 
 @main("Home") {
   <h3>
-    Core Design is a professional...
+    Core Design is a professional web design and online application development company based in Dublin, Ireland
   </h3>
 
   <h4>We specialize in the following areas:</h4>
   <ul>
     <li>Web Design</li>
     <li>Content Management</li>
-    <li>...</li>
+    <li>Web application development</li>
+    <li>Ecommerce and payment</li>
+    <li>Security</li>
+    <li>Search Engine Optimization</li>
   </ul>
+
+  <p>Please, <a href="@routes.HomeController.contact()">contact us</a> to discuss your requirements</p> 
 }
