--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,23 +4,25 @@
 <html lang="en" id="@pageID">
     <head>
         <title>Core Design - @pageID</title> 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("stylesheets/Style.css")" />
     </head>
     <body>
         <div id="Container">
             <div id="Logo">
+                <img class="img-responsive" src="@routes.Assets.versioned("images/apple.jpg")" alt="apple">
                 <h1>Core Design</h1>
                 <h3> 
-                    <em>Website Design...</em>
+                    <em>Website Design and Development Services</em>
                 </h3>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="@routes.HomeController.index()">Home</a></li>
-                    <li><a href="@routes.HomeController.about()">About Us</a></li>
-                    <li><a href="@routes.HomeController.services()">Services</a></li>
-                    <li><a href="@routes.HomeController.clients()">Clients</a></li>
-                    <li><a href="@routes.HomeController.contact()">Contact Us</a></li>
+            <nav class="navbar navbar-default">
+                <ul class="nav navbar-nav">
+                    <li @if(pageID == "Home"){class="active"}><a href="@routes.HomeController.index()">Home</a></li>
+                    <li @if(pageID == "About"){class="active"}><a href="@routes.HomeController.about()">About Us</a></li>
+                    <li @if(pageID == "Services"){class="active"}><a href="@routes.HomeController.services()">Services</a></li>
+                    <li @if(pageID == "Clients"){class="active"}><a href="@routes.HomeController.clients()">Clients</a></li>
+                    <li @if(pageID == "Contact"){class="active"}><a href="@routes.HomeController.contact()">Contact Us</a></li>
                 </ul>
             </nav>
             <div id="Content">
